# E2ESignLanguageDetection

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
app/templates/: index.html
config/: config.yaml
notebooks/: trial.ipynb
src/sign_language_detection/components/: capture_image.py
src/sign_language_detection/config/: configuration.py
src/sign_language_detection/constants/: __init__.py
src/sign_language_detection/entity/: config_entity.py
src/sign_language_detection/exceptions/: __init__.py  exception_handler.py
src/sign_language_detection/logger/: log.py
src/sign_language_detection/utils/: __init__.py  util.py
